tests/parser/fail/self-block-param.som
"test:
failMessage:
  - contains: define
  - contains: self
"

SelfBlockParam = (
  test = (
    [ :self | 42 ] value.
  )
)
